# LAN-4GateLibraryCPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  TODO.md
.github/workflows/: linux.yml  (+2 more)
Logger/: CMakeLists.txt
Logger/include/: ILogger.h  Logger.h  WrapperLogger.h  WrapperP7.h
Logger/src/: Logger.cpp  WrapperP7.cpp
doxygen/: _card_input_method_8h_source.html  _cardholder_auth_method_8h_source.html  _communicatin_factory_8h_source.html  _doxygen_mainpage_8h_source.html  _i_communication_8h_source.html  _i_interaction_data_8h_source.html  _i_lan4_gate_8h_source.html  _i_message_builder_8h_source.html  _i_message_parser_8h_source.html  _i_notification_data_8h_source.html  _i_request_data_8h_source.html  _i_response_data_8h_source.html  _interaction_code_8h_source.html  _interaction_data_factory_8h_source.html  _lan4_gate_factory_8h_source.html  _lan4_gate_incude_8h_source.html  _message_builder_factory_8h_source.html  _message_parser_factory_8h_source.html  _message_type_8h_source.html  _notification_code_8h_source.html  _notification_data_factory_8h_source.html  _operation_code_8h_source.html  _request_data_factory_8h_source.html  _request_field_8h_source.html  _response_data_factory_8h_source.html  _response_field_8h_source.html  _status_8h_source.html  _version_8h_source.html  _visibility_macroses_8h_source.html  annotated.html  annotated_dup.js  class_lanter_1_1_communication_1_1_communication_factory-members.html  class_lanter_1_1_communication_1_1_communication_factory.html  class_lanter_1_1_communication_1_1_communication_factory.js  class_lanter_1_1_communication_1_1_i_communication-members.html  class_lanter_1_1_communication_1_1_i_communication.html  class_lanter_1_1_communication_1_1_i_communication.js  class_lanter_1_1_manager_1_1_i_lan4_gate-members.html  class_lanter_1_1_manager_1_1_i_lan4_gate.html  class_lanter_1_1_manager_1_1_i_lan4_gate.js  (+131 more)
include/: Lan4GateSwig.i
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/Impl_tests/Communication/: TestSizeControlDecorator.cpp
tests/unit_tests/Impl_tests/MOCK/: MOCKCallback.h
tests/unit_tests/Impl_tests/Manager/: Lan4Gate.cpp  MOCKCallback.h  MOCKComm.h  TestLan4Gate.cpp
tests/unit_tests/Impl_tests/Message/Interaction/: TestInteractionData.cpp
tests/unit_tests/Impl_tests/Message/Notification/: NotificationData.cpp  TestNotificationData.cpp
tests/unit_tests/Impl_tests/Message/Notifications/: NotificationData.cpp
tests/unit_tests/Impl_tests/Message/Request/: RequestData.cpp  TestRequestData.cpp
tests/unit_tests/Impl_tests/Message/Request/Validators/: RequestValidatorFactory.cpp  TestRequestValidatorFactory.cpp
tests/unit_tests/Impl_tests/Message/Request/Validators/Operations/: RequestBasicValidator.cpp  RequestOperationValidators.cpp  TestRequestBasicValidator.cpp  TestRequestOperationValidators.cpp
tests/unit_tests/Impl_tests/Message/Response/: ResponseData.cpp  TestResponseData.cpp
tests/unit_tests/Impl_tests/Message/Response/Validators/: ResponseValidatorFactory.cpp  TestResponseValidatorFactory.cpp
tests/unit_tests/Impl_tests/Message/Response/Validators/Operations/: ResponseBasicValidator.cpp  ResponseOperationValidators.cpp  TestResponseBasicValidator.cpp  TestResponseOperationValidators.cpp
tests/unit_tests/Impl_tests/MessageProcessor/: JSONFieldExists.cpp  JSONFields.cpp  JSONNotificationBuilder.cpp  JSONRequestBuilder.cpp  JSONResponseBuilder.cpp  TestJSONFieldExists.cpp  TestJSONFields.cpp
tests/unit_tests/Impl_tests/MessageProcessor/MessageBuilder/: JSONAddFieldHelper.cpp  JSONMessageBuilder.cpp  JSONNotificationBuilder.cpp  JSONRequestBuilder.cpp  JSONResponseBuilder.cpp  TestJSONAddFieldHelper.cpp  TestJSONInteractionBuilder.cpp  TestJSONMessageBuilder.cpp  TestJSONNotificationBuilder.cpp  TestJSONRequestBuilder.cpp  TestJSONResponseBuilder.cpp
tests/unit_tests/Impl_tests/MessageProcessor/MessageParser/: JSONGetFieldHelper.cpp  JSONMessageParser.cpp  JSONMessageTypeChecker.cpp  JSONNotificationParser.cpp  JSONRequestParser.cpp  JSONResponseParser.cpp  JSONRootFieldsChecker.cpp  TestJSONGetFieldHelper.cpp  TestJSONInteractionParser.cpp  TestJSONMessageParser.cpp  TestJSONMessageTypeChecker.cpp  TestJSONNotificationParser.cpp  TestJSONRequestParser.cpp  TestJSONResponseParser.cpp  TestJSONRootFieldsChecker.cpp
tests/unit_tests/Impl_tests/Notifications/: NotificationData.cpp
tests/unit_tests/Impl_tests/Request/: RequestData.cpp
tests/unit_tests/Impl_tests/Request/Validators/: RequestValidatorFactory.cpp  ValidatorFactory.cpp
tests/unit_tests/Impl_tests/Request/Validators/Operations/: BasicValidator.cpp  OperationValidators.cpp  RequestBasicValidator.cpp  RequestOperationValidators.cpp
tests/unit_tests/Impl_tests/Response/: ResponseData.cpp
tests/unit_tests/Impl_tests/Response/Validators/: ResponseValidatorFactory.cpp
tests/unit_tests/Impl_tests/Response/Validators/Operations/: ResponseBasicValidator.cpp  ResponseOperationValidators.cpp
tests/unit_tests/Impl_tests/Utils/: FieldsRangeChecker.cpp  RangeChecker.cpp  StringConverter.cpp  StringTrimmer.cpp  TestFieldsRangeChecker.cpp  TestRangeChecker.cpp  TestStringConverter.cpp  TestStringTrimmer.cpp
tests/unit_tests/InterfaceTest/: NotificationDataFactory.cpp  RequestDataFactory.cpp  ResponseDataFactory.cpp
tests/unit_tests/InterfaceTest/Communication/: TestCommunicationFactory.cpp
tests/unit_tests/InterfaceTest/Message/: NotificationDataFactory.cpp  RequestDataFactory.cpp  ResponseDataFactory.cpp  TestInteractionDataFactory.cpp  TestNotificationDataFactory.cpp  TestRequestDataFactory.cpp  TestResponseDataFactory.cpp
tests/unit_tests/InterfaceTest/MessageProcessor/: TestBuilderParser.cpp
tests/unit_tests/InterfaceTest/MessageProcessor/MessageBuilder/: MessageBuilderFactory.cpp  TestMessageBuilderFactory.cpp
tests/unit_tests/InterfaceTest/MessageProcessor/MessageParser/: MessageParserFactory.cpp  TestMessageParserFactory.cpp
tests/unit_tests/Requests/: RequestData.cpp
tests/unit_tests/Requests/FieldsValidators/: FieldsValidator.cpp
(+790 files in other folders)
